# splurge-data-profiler

./: .gitignore  README.md  debug_type_inference.py  pyproject.toml  test_config.json
.cursor/rules/: python.mdc
examples/: example_config.json  generate_example_data.py  performance_test.py
splurge_data_profiler/: __main__.py  cli.py  data_lake.py  profiler.py  source.py
tests/: run_tests.py  test_cli.py  test_data_lake.py  test_profiler.py  test_source.py
tests/edge_cases/: test_source_edge.py
tests/integration/: test_source_integration.py
tests/performance/: README.md  __init__.py  test_basic_performance.py  test_performance_benchmarks.py
tests/unit/: test_source_unit.py
